--- a/app/src/main/res/layout/activity_apartadogastos.xml
+++ b/app/src/main/res/layout/activity_apartadogastos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Gastos">
+    tools:context=".Apartado_Gastos">
 
     <TextView
         android:id="@+id/textView5"
