--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,10 +8,23 @@
 
     <FrameLayout
         android:id="@+id/frame_conrainer"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="587dp"
+        android:layout_above="@+id/bottom_navigation"
         android:layout_alignParentTop="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:clickable="true"
+            app:rippleColor="@color/white"
+            app:shapeAppearanceOverlay="@style/Corte_bordes_BTN"
+            app:srcCompat="@drawable/apart_configuracion" />
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
