--- a/app/src/main/res/layout/activity_crear_gastos.xml
+++ b/app/src/main/res/layout/activity_crear_gastos.xml
@@ -125,24 +125,25 @@
                 android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/spinnerDia"
-                    android:layout_width="84dp"
-                    android:layout_height="match_parent"
-                    android:prompt="@string/default_day" />
-
-                <Spinner
-                    android:id="@+id/spinnerMes"
-                    android:layout_width="98dp"
+                <ImageButton
+                    android:id="@+id/btnfecha"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:prompt="@string/default_month" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:onClick="mostrarcalendario"
+                    app:srcCompat="@drawable/btn_fecha" />
 
-                <Spinner
-                    android:id="@+id/spinnerAño"
-                    android:layout_width="115dp"
+                <TextView
+                    android:id="@+id/numerofecha"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:prompt="@string/default_year" />
-
+                    android:layout_gravity="center"
+                    android:layout_weight="13"
+                    android:hint="@string/Num_Fecha"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <TextView
@@ -164,6 +165,7 @@
                 android:layout_marginBottom="11dp"
                 android:contentDescription="longitud"
                 android:hint="@string/Num_Longitud"
+                android:onClick="mostrarcalendario"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
