--- a/app/src/main/res/layout/fragment_gastos.xml
+++ b/app/src/main/res/layout/fragment_gastos.xml
@@ -8,7 +8,7 @@
     tools:context=".Menu_Fragment.GastosFragment">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/TituloGastos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -20,7 +20,7 @@
         android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/ListaGastos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="20dp"
