--- a/app/src/main/res/layout/activity_item_gastos.xml
+++ b/app/src/main/res/layout/activity_item_gastos.xml
@@ -22,7 +22,7 @@
             android:padding="6dp">
 
             <ImageView
-                android:id="@+id/iconproducto"
+                android:id="@+id/icongastos"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
@@ -41,7 +41,8 @@
                 android:layout_marginStart="3dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="10dp"
-                android:layout_toRightOf="@+id/iconproducto"
+                android:layout_marginBottom="10dp"
+                android:layout_toRightOf="@+id/icongastos"
                 android:orientation="vertical">
 
                 <TextView
