--- a/app/src/main/res/layout/activity_descirpcion_gastos.xml
+++ b/app/src/main/res/layout/activity_descirpcion_gastos.xml
@@ -13,8 +13,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="53dp"
-        android:hint="@string/Nombre_Gastos"
-        android:textColor="#000000"
+        android:text="@string/Nombre_Gastos"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +75,7 @@
                 android:id="@+id/Categoria"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="1dp"
                 android:layout_marginBottom="15dp"
                 android:text="@string/Categoria"
                 android:textSize="16sp"
@@ -107,72 +107,63 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
+            android:layout_marginLeft="5dp"
             android:orientation="vertical">
 
             <EditText
                 android:id="@+id/numeromonto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/Num_Monto"
+                android:text="@string/Num_Monto"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-
+            <TextView
+                android:id="@+id/numerofecha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/btnfecha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:onClick="mostrarcalendario"
-                    app:srcCompat="@drawable/btn_fecha" />
-
-                <TextView
-                    android:id="@+id/numerofecha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="13"
-                    android:hint="@string/Num_Fecha"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <Spinner
-                android:id="@+id/spicategorias"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp" />
+                android:layout_gravity="center"
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="11dp"
+                android:text="@string/Num_Fecha"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/longitudeTextView"
+                android:id="@+id/nomcategoria"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="11dp"
                 android:layout_marginBottom="11dp"
-                android:contentDescription="longitud"
-                android:hint="@string/Num_Longitud"
-                android:onClick="mostrarcalendario"
+                android:text="@string/Nom_Categoria"
+                android:textColor="@color/black"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/latitudeTextView"
+                android:id="@+id/numlatitud"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="11dp"
                 android:layout_marginBottom="11dp"
                 android:contentDescription="latitud"
                 android:hint="@string/Num_Latitud"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/numlongitud"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="11dp"
+                android:layout_marginBottom="11dp"
+                android:contentDescription="longitud"
+                android:hint="@string/Num_Longitud"
+                android:textColor="@color/black"
+                android:onClick="mostrarcalendario"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
