Punto de guardado - CRUD pequeña correcion de en editar Mejorar el resfrescar layout caundo se elimine, modifique (ya esta para cuando se crea y hay botones para volver atras)

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="right|top"
             android:clickable="true"
             app:rippleColor="@color/white"
-            app:shapeAppearanceOverlay="@style/Corte_bordes_BTN"
+            app:shapeAppearanceOverlay="@style/Corte_bordes_BTNDerecha"
             app:srcCompat="@drawable/apart_configuracion" />
     </FrameLayout>
 
