Punto de guardado - mapa con ubicacion del telefono y marcas de los gastos (aunque son las marcas por defaut de maps)

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -4,7 +4,7 @@
     <PreferenceCategory app:title="@string/PresupuestoTotal">
 
         <EditTextPreference
-            app:key="presupuestoall"
+            app:key="presupuestoTotal"
             app:title="@string/SuPresupuesto"
             app:defaultValue="0"
             app:useSimpleSummaryProvider="true" />
