--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -105,6 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="18dp"
+                    android:gravity="clip_vertical|center_horizontal"
                     android:text="Presupuesto/Gasto"
                     android:textAlignment="center"
                     android:textSize="20sp"
@@ -116,6 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="18dp"
+                    android:gravity="clip_vertical|center_horizontal"
                     android:text="Presupuesto/Gasto"
                     android:textAlignment="center"
                     android:textSize="20sp"
@@ -127,6 +129,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="18dp"
+                    android:gravity="clip_vertical|center_horizontal"
                     android:text="Presupuesto/Gasto"
                     android:textAlignment="center"
                     android:textSize="20sp"
@@ -138,6 +141,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="18dp"
+                    android:gravity="clip_vertical|center_horizontal"
                     android:text="Presupuesto/Gasto"
                     android:textAlignment="center"
                     android:textSize="20sp"
@@ -149,6 +153,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="18dp"
+                    android:gravity="clip_vertical|center_horizontal"
                     android:text="Presupuesto/Gasto"
                     android:textAlignment="center"
                     android:textSize="20sp"
@@ -160,6 +165,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="18dp"
+                    android:gravity="clip_vertical|center_horizontal"
                     android:text="Presupuesto/Gasto"
                     android:textAlignment="center"
                     android:textSize="20sp"
@@ -171,6 +177,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="18dp"
+                    android:gravity="clip_vertical|center_horizontal"
                     android:text="Presupuesto/Gasto"
                     android:textAlignment="center"
                     android:textSize="20sp"
@@ -182,6 +189,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="18dp"
+                    android:gravity="clip_vertical|center_horizontal"
                     android:text="Presupuesto/Gasto"
                     android:textAlignment="center"
                     android:textSize="20sp"
